# ton-explorer-event-details

./: .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json
js/: index.js
src/: contract.rs  eth.rs  lib.rs  tvm.rs  utils.rs
static/: index.html
tests/: TokenEventProxy.abi.json  TokenWallet.abi.json  ton_event.tvc  web.rs
